=== HEAD

* Work around pragma bug on jdbc/sqlite when emulating alter table support (jeremyevans)

* Database#<< and Dataset#<< now return self so they can be safely chained (jeremyevans)

* Fully support using an aliased table name as the :join_table option for a many_to_many association (jeremyevans)

* Make like case sensitive on SQLite and Microsoft SQL Server (use ilike for case insensitive matching) (jeremyevans)

* Add Database#extend_datasets for the equivalent of extending of the Database object's datasets with a module (jeremyevans)

* Speed up Dataset #map, #to_hash, and related methods if an array of symbols is given (jeremyevans)

* Add Database#dataset_class for modifying the class used for datasets for a single Database object (jeremyevans)

* Plugins that override Model.load should be modified to override Model.call instead (jeremyevans)

* Speed up loading model objects from the database by up to 7-16% (jeremyevans)

* Create accessor methods for all columns in a model's table, even if the dataset doesn't select the columns (jeremyevans)

* Add mock adapter for better mocking of a database connection (jeremyevans)

* Have models pass their dataset instead of table name to Database#schema (jeremyevans)

* Allow Database#schema to take a dataset as the table argument, and use its identifier input/output methods (jeremyevans)

* Significant improvements to the db2 adapter (jeremyevans)

* Handle methods with names that can't be called directly in Model.def_dataset_method (jeremyevans)

* Add dataset_associations plugin for making dataset methods that return datasets of associated objects (jeremyevans)

* Don't allow Model.def_dataset_method to override private model methods (jeremyevans)

* Parsing primary key information from system tables in the shared MSSQL adapter (jeremyevans)

* Fix handling of composite primary keys when emulating alter table operations on SQLite (jeremyevans)
