@@ -1,5 +1,9 @@
 === HEAD
 
+* Apply Model.[] optimization in more cases (jeremyevans)
+
+* Fix Model.[] optimization when dataset uses identifier_input_method different than database (jeremyevans)
+
 * Work around pragma bug on jdbc/sqlite when emulating alter table support (jeremyevans)
 
 * Database#<< and Dataset#<< now return self so they can be safely chained (jeremyevans)
